04-service-mesh/demo-app-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-v1
  namespace: istio-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
      version: v1
  template:
    metadata:
      labels:
        app: demo-app
        version: v1
    spec:
      containers:
        - name: app
          image: hashicorp/http-echo:1.0
          args:
            - "-text=Hello from application v1"
          ports:
            - containerPort: 5678
